--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
   </div>
   <script>
   const shareOptions = document.getElementById("share-options");
-  const shareUrl = encodeURIComponent("https://yourwebsite.com"); // Replace with your actual site
+  const shareUrl = encodeURIComponent("https://satyaprakashmohanty13.github.io/sudoku-solver-from-image/"); // Replace with your actual site
 
   function toggleShare() {
     shareOptions.style.display = (shareOptions.style.display === "flex") ? "none" : "flex";
