--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- Logo and Title Section -->
     <div class="flex items-center justify-center sm:justify-start gap-4 mb-4 sm:mb-0">
       <!-- Your logo image - Made bigger (h-16 w-16) -->
-      <img src="logo.png" alt="Sudoku Solver Logo" class="h-16 w-16 object-contain rounded-full shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/64x64/aabbcc/ffffff?text=LOGO';" />
+      <img src="logo.svg" alt="Sudoku Solver Logo" class="h-16 w-16 object-contain rounded-full shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/64x64/aabbcc/ffffff?text=LOGO';" />
       <h1 class="text-3xl sm:text-4xl font-extrabold text-gray-900">Sudoku Solver From Image</h1>
     </div>
 
